Use java.io.Processbuilder to create flow processes.